--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Return vs console.log</title>
   </head>
   <body>
-  <script type="text/javascript" href="main.js"></script>
+  <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
